# medical-intelligence-platform

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAGSTER_GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  INSTALLATION.md  LICENSE  Makefile  NLP_GUIDE.md  README.md  RUNBOOK.md  SECURITY.md  TROUBLESHOOTING.md  black.toml  docker-compose.yml  isort.cfg  main.py  medical_intel_session.session  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-nlp.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: build.yml  lint.yml  security.yml  tests.yml
.tmp_dagster_home_ta4vtzn1/history/: runs.db
.tmp_dagster_home_ta4vtzn1/schedules/: schedules.db
alerts/: alert_rules.yml
dashboards/: __init__.py  config.py  streamlit_app.py  utils.py
dashboards/Views/: 02_products.py  03_pricing.py  (+2 more)
data/: sample_messages.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/: PRODUCTION_CHECKLIST.md
grafana/: datasources.json
k8s/: api-deployment.yml  api-hpa.yml  api-pdb.yml  api-service.yml  configmap.yml  namespace.yml  secrets.yml.example
prometheus/: prometheus.yml
scripts/: README.md  analyze_nlp.py  analyze_yolo.py  backup_db.sh  benchmark.py  cleanup.sh  health_check.sh  migrate_db.py  restore_db.sh  run_complete_pipeline.sh  run_pipeline.ps1  run_pipeline.sh  scrape_telegram.py  seed_data.py  setup.ps1  setup.sh  setup_db.py  validate_env.py
src/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  fixtures.py
(+105 files in other folders)
