[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-intelligence-platform"
version = "0.1.0"
description = "NLP and YOLO-powered medical data analyzer with Telegram scraping, dbt, API and Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Medical Intelligence Team" }]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "streamlit>=1.29.0",
    "dagster>=1.6.0",
    "requests>=2.32.5",
    "dbt-postgres>=1.10.0",
    "telethon>=1.42.0",
    "python-socks[asyncio]>=2.8.0",
    "pytest>=9.0.2",
    "spacy>=3.7.0",
    "shap>=0.44.0",
    "transformers>=5.1.0",
    "torch>=2.10.0",
    "hf>=1.4.1",
]

[project.optional-dependencies]
nlp = ["spacy>=3.7.0", "transformers>=4.36.0", "shap>=0.44.0"]
yolo = ["ultralytics>=8.0.0", "torch>=2.0.0"]
dev = ["black", "isort", "flake8", "mypy", "pytest", "pre-commit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboards*"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '/(\.git|dbt|\.venv)/'

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "dbt"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
